# rygel-cl

./: .gitignore  common.am  configure.ac  rygel-ruih-1.0.pc.in
build-aux/: git-version-gen
data/: rygel.conf
data/icons/: Makefile.am
data/icons/24x24/: Makefile.am
data/xml/: AVTransport2.xml.in  ContentDirectory.xml.in  EnergyManagement.xml.in  Makefile.am  RemoteUIServerService.xml.in  RuihServer2.xml.in.in  UIList.xml.in  X_MS_MediaReceiverRegistrar1.xml.in  profiles.xml.in
doc/man/: rygel.conf.xml
examples/: Makefile.am  standalone-ruih.c  standalone-server.c
src/librygel-core/: Makefile.am  filelist.am  rygel-basic-management-test.vala  rygel-basic-management.vala  rygel-connection-manager.vala  rygel-description-file.vala  rygel-dlna-profile.vala  rygel-plugin.vala
src/librygel-renderer/: rygel-av-transport.vala  rygel-dlna-profile.vala  rygel-media-player.vala  rygel-media-renderer-plugin.vala
src/librygel-renderer-gst/: rygel-playbin-player.vala
src/librygel-ruih/: Makefile.am  filelist.am  rygel-ruih-server-plugin.vala  rygel-ruih-server.vala  rygel-ruih-service.vala  rygel-ruih-servicemanager.vala  rygel-uilisting-manager.vala
src/librygel-server/: filelist.am  rygel-audio-item.vala  rygel-browse.vala  rygel-connection-manager-protocolinfo.vala  rygel-content-directory.vala  rygel-data-sink.vala  rygel-data-source.vala  rygel-dlna-available-seek-request.vala  rygel-dlna-available-seek-response.vala  rygel-dlna-playspeed.vala  rygel-dtcp-cleartext-byte-seek.vala  rygel-dtcp-cleartext-request.vala  rygel-dtcp-cleartext-response.vala  rygel-http-byte-seek-request.vala  rygel-http-byte-seek-response.vala  rygel-http-byte-seek.vala  rygel-http-get-handler.vala  rygel-http-get.vala  rygel-http-identity-handler.vala  rygel-http-item-uri.vala  rygel-http-playlist-handler.vala  rygel-http-request-util.vala  rygel-http-request.vala  rygel-http-resource-handler.vala  rygel-http-response-element.vala  rygel-http-response.vala  rygel-http-seek.vala  rygel-http-server.vala  rygel-http-subtitle-handler.vala  rygel-http-thumbnail-handler.vala  rygel-http-time-seek-request.vala  rygel-http-time-seek-response.vala  rygel-http-time-seek.vala  rygel-http-transcode-handler.vala  rygel-image-item.vala  rygel-import-resource.vala  rygel-item-destroyer.vala  rygel-item-updater.vala  rygel-media-container.vala  rygel-media-engine.vala  (+30 more)
src/media-engines/: Makefile.am
src/media-engines/cl-dlna/: Makefile.am  cl-dlna-data-source.vala  cl-dlna-fake-transcoder.vala  cl-dlna-media-engine.vala  cl-dlna-media-rendering.vala  media-engine-cl-dlna.plugin.in
src/media-engines/odid/: Makefile.am  dtcpip.h  dtcpip.vapi  dtcpip_stub.c  media-engine-odid.plugin.in  odid-control-channel.vala  odid-data-source.vala  odid-fake-transcoder.vala  odid-index-entry.vala  odid-live-simulator.vala  odid-media-engine.vala  odid-mp2-parser-test.vala  odid-mp2-parser.vala  odid-mp4-parser-test.vala  odid-mp4-parser.vala  odid-stream-ext.vala  odid-util.vala
src/plugins/: Makefile.am
src/plugins/odid/: Makefile.am  odid.plugin.in  rygel-odid-collate.c  rygel-odid-database-cursor.vala  rygel-odid-database.vala  rygel-odid-db-container.vala  rygel-odid-dummy-container.vala  rygel-odid-harvester.vala  rygel-odid-harvesting-task.vala  rygel-odid-item-factory.vala  rygel-odid-jpeg-writer.vala  rygel-odid-leaf-query-container.vala  rygel-odid-media-cache-upgrader.vala  rygel-odid-media-cache.vala  rygel-odid-media-item.vala  rygel-odid-metadata-extractor.vala  rygel-odid-music-item.vala  rygel-odid-node-query-container.vala  rygel-odid-null-container.vala  rygel-odid-object-factory.vala  rygel-odid-photo-item.vala  rygel-odid-playlist-container.vala  rygel-odid-playlist-item.vala  rygel-odid-playlist-root-container.vala  rygel-odid-plugin.vala  rygel-odid-query-container-factory.vala  rygel-odid-query-container.vala  rygel-odid-recursive-file-monitor.vala  rygel-odid-root-container.vala  rygel-odid-sql-factory.vala  rygel-odid-sql-function.vala  rygel-odid-sql-operator.vala  rygel-odid-sqlite-wrapper.vala  rygel-odid-trackable-db-container.vala  rygel-odid-updatable-object.vala  rygel-odid-video-item.vala  rygel-odid-writable-db-container.vala
src/plugins/ruih/: Makefile.am  (+3 more)
(+36 files in other folders)
